style.css
/*
Propriétés générales du site
mobile first
*/

body {
  display: flex;
  flex-wrap: nowrap;
  margin: 0 auto;
  font-family: "Varela Round", "Monserrat", "Open sans", sans-serif;
  color: #39424e;
}

@media (min-width: 800px) {
  body {
    flex-wrap: wrap;
  }
}

/*
Propriétés de la navbar
mobile first
*/

.sidebar {
  display: flex;
  width: 12.5em;
}

@media (min-width: 800px) {
  .sidebar {
    width: 100%;
    position: fixed;
  }
}

nav ul {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-color: #39424e;
  width: 12.5em;
  margin: 0;
  padding: 0.625em;
  font-size: 1.063em;
}

@media (min-width: 800px) {
  nav ul {
    flex-direction: row;
    width: 100%;
    padding: 1.5em;
  }
}

nav ul li {
  list-style: none;
}

nav ul li a {
  color: white;
  font-weight: bold;
  text-decoration: none;
}

nav ul li a:hover {
  color: #f76f6f;
}

#logo {
  height: 3em;
}

/* @media (min-width: 800px) {
    #logo {
      display: none;
    }
  } */

/*
Propriétés de la bannière
mobile first
*/

.banniere {
  background: white;
  width: 100%;
}

#banniere-img {
  max-width: 100%;
  height: auto;
}

@media (min-width: 800px) {
  #banniere-img {
    display: block;
    margin: auto;
    padding-top: 5em;
  }
}

/*
Propriétés générales du titre principal
mobile first
*/

.main-title {
  text-align: center;
  font-family: "Varela Round", sans-serif;
  font-size: small;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  text-shadow: 1px 1px 2px #39424e;
  background: white;
  padding-top: 0.5em;
  padding-bottom: 1.5em;
}

@media (min-width: 800px) {
  .main-title {
    font-size: large;
  }
}

/*
Propriétés générales du corps
mobile first
*/

.container-main {
  width: 37.5em;
  margin: 0px;
}

@media (min-width: 800px) {
  .container-main {
    width: 100%;
  }
}

.container-main-body {
  padding: 1.5em;
}

/*
Propriétés générales du footer
mobile first
*/

footer {
  background: pink;
  padding: 0.3em;
}

footer p {
  text-align: center;
  font-style: italic;
  font-size: 1.2em;
}

.container-footer {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding-bottom: 1.5em;
}

.wilder-reseaux {
  color: white;
  /* background: border-box rgba(57, 66, 78, 0.75); */
  background: border-box rgba(247, 111, 111, 0.7);
  width: 13em;
  border-radius: 1em;
  margin: 1em;
}

footer ul li {
  display: flex;
  list-style: none;
}

.icone {
  width: 35%;
  height: 35%;
}

